# Building-a-RAG-Pipeline-with-Airflow

./: .env  .gitignore  Makefile  README.md  chromadb_pipeline_filesturcture.md  directory_structure_for_ragpipeline.md  docker-compose.yml  local_vectors.db  pinecone_pipeline_workflow.md  pyproject.toml  requirements.txt  setup.sh
Airflow/: Dockerfile  requirements.txt
Airflow/config/: nvidia_config.json
Airflow/dags/: Sec_data_pipeline.py  markdown_embedding_pipeline.py  markdown_embedding_pipeline_chromadb.py  markdown_embedding_pipeline_pinecone.py  mistral_markdown_upload.py  nvidia_quarterly_reports_pipeline.py  parsing_and_chunking.py
Airflow/logs/: nvidia_page_source.html  page_source.html
Airflow/parsing_methods/: mistralparsing.py
Backend/: Dockerfile  api.py  chromadb_viewer.py  litellm_query_generator.py  requirements.txt
Backend/parsing_methods/: mistralparsing.py  mistralparsing_userpdf.py
Chunking_Strats/: chromadb_rag.py  kamredt_chunking.py
Frontend/: app.py  main_app.py  requirements.txt
Rag_modelings/: chromadb_pipeline.py  rag_manual.py  rag_pinecone.py
backend/: Dockerfile  app.py  requirements.txt
dags/: Dockerfile  rag_pipeline.py  requirements.txt
frontend/: Dockerfile  app.py
scripts/: chromadb.py  chunking_strategy.py  embedding_generation_s3.py  fetch_nvidia_reports.py  latest_rag.py  pdf_parsing_s3.py  rag_retrieval.py  store_embeddings_s3.py
testing_code/: MistralTest.py  mistraltest.py  nvidia_quarterly_reports.py  selenium_nvidia_webscraping.py  seleniumtest.py  testing_airflow_sec_pipeline.py
(+11 files in other folders)
