[project]
name = "rag-pipeline-airflow"
version = "0.1.0"
description = ""
authors = [
    {name = "shushil girish",email = "girish.sh@northeastern.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium (>=4.0.0)",
    "webdriver-manager (>=3.8.0)",
    "cryptography (>=44.0.2,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
