[project]
name = "rag-pipeline-airflow"
version = "0.1.0"
description = ""
authors = [
    {name = "shushil girish",email = "girish.sh@northeastern.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "selenium (>=4.0.0)",
    "webdriver-manager (>=3.8.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "mistralai (>=1.5.1,<2.0.0)",
    "docling (>=2.27.0,<3.0.0)",
    "boto3 (>=1.37.15,<2.0.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.10.6,<3.0.0)",
    "asyncio (>=3.4.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
